--- a/sightline/test-output/emailable-report.html
+++ b/sightline/test-output/emailable-report.html
@@ -9,16 +9,36 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">3</td><td class="num">136,545</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">258,760</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">testScriptsSmoke.TS_019_ICEWorkFlow</td><td><a href="#m0">PMUploadAndInitiate</a></td><td rowspan="1">1623843651481</td><td rowspan="1">8360</td></tr><tr class="failedeven"><td><a href="#m1">PMUploadAndRefresh</a></td><td rowspan="1">1623843691539</td><td rowspan="1">31384</td></tr><tr class="failedeven"><td><a href="#m2">RMUploadAndInitiate</a></td><td rowspan="1">1623843660004</td><td rowspan="1">31359</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScriptsSmoke.TS_019_ICEWorkFlow</td><td><a href="#m3">SystemAdminUserVerifications</a></td><td rowspan="1">1623843606816</td><td rowspan="1">44659</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">testScriptsSmoke.TS_019_ICEWorkFlow</td><td><a href="#m0">PMUploadAndInitiate</a></td><td rowspan="1">1623926178138</td><td rowspan="1">61905</td></tr><tr class="failedeven"><td><a href="#m1">PMUploadAndRefresh</a></td><td rowspan="1">1623926386338</td><td rowspan="1">31279</td></tr><tr class="failedeven"><td><a href="#m2">RMUploadAndInitiate</a></td><td rowspan="1">1623926241342</td><td rowspan="1">144818</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testScriptsSmoke.TS_019_ICEWorkFlow#PMUploadAndInitiate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+<h2>Default test</h2><h3 id="m0">testScriptsSmoke.TS_019_ICEWorkFlow#PMUploadAndInitiate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//*[@id=&apos;user-selector&apos;]&quot;}
+  (Session info: chrome=90.0.4430.212)
+  (Driver info: chromedriver=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91),platform=Windows NT 10.0.18363 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 7 milliseconds
+For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
+Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
+System info: host: &apos;LNT-HZ-NP-SQA13&apos;, ip: &apos;10.224.187.243&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_271&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1\Temp\scoped_dir42896_28063}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=90.0.4430.212, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 4af2139492bc14278b03be7a65e73337
+*** Element info: {Using=xpath, value=//*[@id=&apos;user-selector&apos;]}
+	at sun.reflect.GeneratedConstructorAccessor15.newInstance(Unknown Source)
+	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
+	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:215)
+	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:410)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:509)
+	at org.openqa.selenium.By$ByXPath.findElement(By.java:361)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:402)
 	at automationLibrary.Element.AssertExists(Element.java:506)
-	at automationLibrary.Element.ScrollTo(Element.java:184)
-	at pageFactory.ManageUsersPage.getUserListbyUserName(ManageUsersPage.java:220)
-	at testScriptsSmoke.TS_019_ICEWorkFlow.PMUploadAndInitiate(TS_019_ICEWorkFlow.java:100)
+	at automationLibrary.Element.Displayed(Element.java:116)
+	at automationLibrary.Element.Visible(Element.java:123)
+	at pageFactory.LoginPage.loginToSightLineICE(LoginPage.java:181)
+	at testScriptsSmoke.TS_019_ICEWorkFlow.PMUploadAndInitiate(TS_019_ICEWorkFlow.java:150)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -53,8 +73,8 @@ For documentation on this error, please visit: http://seleniumhq.org/exceptions/
 Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
 System info: host: &apos;LNT-HZ-NP-SQA13&apos;, ip: &apos;10.224.187.243&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_271&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1\Temp\scoped_dir17744_19226}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=90.0.4430.212, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: afed7ec7dc5369168803a354f1826536
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1\Temp\scoped_dir42896_28063}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=90.0.4430.212, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 4af2139492bc14278b03be7a65e73337
 *** Element info: {Using=id, value=txtBxUserID}
 	at sun.reflect.GeneratedConstructorAccessor15.newInstance(Unknown Source)
 	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -69,7 +89,7 @@ Session ID: afed7ec7dc5369168803a354f1826536
 	at automationLibrary.Element.AssertExists(Element.java:506)
 	at automationLibrary.Element.SendKeys(Element.java:437)
 	at pageFactory.LoginPage.loginToSightLineICE(LoginPage.java:131)
-	at testScriptsSmoke.TS_019_ICEWorkFlow.PMUploadAndRefresh(TS_019_ICEWorkFlow.java:352)
+	at testScriptsSmoke.TS_019_ICEWorkFlow.PMUploadAndRefresh(TS_019_ICEWorkFlow.java:377)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -96,17 +116,17 @@ Session ID: afed7ec7dc5369168803a354f1826536
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testScriptsSmoke.TS_019_ICEWorkFlow#RMUploadAndInitiate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;id&quot;,&quot;selector&quot;:&quot;txtBxUserID&quot;}
+<h3 id="m2">testScriptsSmoke.TS_019_ICEWorkFlow#RMUploadAndInitiate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;css selector&quot;,&quot;selector&quot;:&quot;#myTab1 &gt; li:nth-child(2) &gt; a&quot;}
   (Session info: chrome=90.0.4430.212)
   (Driver info: chromedriver=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91),platform=Windows NT 10.0.18363 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 10 milliseconds
+Command duration or timeout: 8 milliseconds
 For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
 Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
 System info: host: &apos;LNT-HZ-NP-SQA13&apos;, ip: &apos;10.224.187.243&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_271&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1\Temp\scoped_dir17744_19226}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=90.0.4430.212, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: afed7ec7dc5369168803a354f1826536
-*** Element info: {Using=id, value=txtBxUserID}
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1\Temp\scoped_dir42896_28063}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=90.0.4430.212, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 4af2139492bc14278b03be7a65e73337
+*** Element info: {Using=css selector, value=#myTab1 &gt; li:nth-child(2) &gt; a}
 	at sun.reflect.GeneratedConstructorAccessor15.newInstance(Unknown Source)
 	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
 	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
@@ -114,13 +134,12 @@ Session ID: afed7ec7dc5369168803a354f1826536
 	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:410)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElementById(RemoteWebDriver.java:453)
-	at org.openqa.selenium.By$ById.findElement(By.java:218)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElementByCssSelector(RemoteWebDriver.java:501)
+	at org.openqa.selenium.By$ByCssSelector.findElement(By.java:430)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:402)
 	at automationLibrary.Element.AssertExists(Element.java:506)
-	at automationLibrary.Element.SendKeys(Element.java:437)
-	at pageFactory.LoginPage.loginToSightLineICE(LoginPage.java:131)
-	at testScriptsSmoke.TS_019_ICEWorkFlow.RMUploadAndInitiate(TS_019_ICEWorkFlow.java:216)
+	at automationLibrary.Element.Click(Element.java:224)
+	at testScriptsSmoke.TS_019_ICEWorkFlow.RMUploadAndInitiate(TS_019_ICEWorkFlow.java:260)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -147,6 +166,5 @@ Session ID: afed7ec7dc5369168803a354f1826536
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testScriptsSmoke.TS_019_ICEWorkFlow#SystemAdminUserVerifications</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Login success!</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
