--- a/sightline/test-output/old/Default suite/groups.html
+++ b/sightline/test-output/old/Default suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/>TS_019_ICEWorkFlow.RMUploadAndInitiate()[pri:3, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/>TS_019_ICEWorkFlow.PMUploadAndRefresh()[pri:4, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/></td></tr>
-<tr><td>smoke</td><td>TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/>TS_019_ICEWorkFlow.RMUploadAndInitiate()[pri:3, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/>TS_019_ICEWorkFlow.PMUploadAndRefresh()[pri:4, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/></td></tr>
+<tr><td>smoke</td><td>TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]<br/></td></tr>
 </table>
